# pydatafaker

./: .gitignore  .readthedocs.yml  CONTRIBUTING.rst  README.ipynb  README.md  README.rmd  pyproject.toml
.github/workflows/: deploy.yml  publish_docs.yml  test.yml  test_with_pytest.yml
docs/: Makefile  conf.py  getting_started.md  index.rst  installation.rst
docs/doctrees/: api_reference.doctree  contributing.doctree  environment.pickle  index.doctree  usage.doctree
docs/html/: genindex.html  index.html  py-modindex.html
docs/html/_sources/: index.rst.txt  usage.rst.txt
docs/source/: api_reference.rst  conf.py  index.rst  modules.rst  pydatafaker.rst  usage.ipynb  usage.md  usage.rmd  usage.rst
docs_build/doctrees/: environment.pickle  index.doctree
docs_build/html/_sources/: api_reference.rst.txt
docs_build/html/_static/: documentation_options.js
docs_source/source/: conf.py
pydatafaker/: business.py  school.py  utilities.py
scripts/: build_docs.sh
tests/: test_business.py  test_school.py  test_utilities.py
