[tool.poetry]
name = "pydatafaker"
version = "0.1.1-alpha.1"
description = "A python package to create fake data with relationships between tables."
authors = ["Sam Edwardes"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
faker = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = {version = "^20.8b1", allow-prereleases = true}
sphinx = "^3.2.1"
sphinxcontrib-napoleon = "^0.7"
recommonmark = "^0.6.0"
sphinx-theme = "^1.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
