[tool.poetry]
name = "pydatafaker"
version = "0.1.2"
description = "A python package to create fake data with relationships between tables."
authors = ["Sam Edwardes"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SamEdwardes/pydatafaker"
documentation = "https://pydatafaker.readthedocs.io/en/latest/index.html"
keywords = ["python", "fake", "data", "fake-data"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.1"
faker = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = {version = "^20.8b1", allow-prereleases = true}
sphinx = "^3.2.1"
sphinxcontrib-napoleon = "^0.7"
sphinx-rtd-theme = "^0.5.0" 
pytest-cov = "^2.10.1"
flake8 = "^3.8.3"
recommonmark = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
